@@ -120,3 +120,34 @@ class ParseCommentTest(unittest.TestCase):
         self.assertEqual('foo', self.entry.comment)
         self.entry.add_comment(256*'x')
         self.assertEqual('foo, '+250*'x', self.entry.comment)
+
+
+class Settings(object):
+    pass
+
+
+class Tracker(dict):
+
+    def __init__(self, **kw):
+        self.update(api_key='', activity='', username='', password='')
+        self.update(kw)
+
+
+class FindTrackerTest(unittest.TestCase):
+
+    def test_tracker_with_longest_prefix_match_gets_project(self):
+        settings = type('Dummy', (object,), {})()
+        settings.redmines = [
+            Tracker(url='1', projects=['as', 'bsdf']),
+            Tracker(url='2', projects=['asdfg']),
+            Tracker(url='3', projects=['asdf', 'b', 'c']),
+        ]
+        settings.jiras = [
+            Tracker(url='4', projects=['asdf']),
+            Tracker(url='5', projects=['d', 'asdf_']),
+            Tracker(url='6', projects=['asdf', 'e']),
+        ]
+        bugtrackers = gocept.gtimelog.bugtracker.Bugtrackers(settings)
+        self.assertEqual('5', bugtrackers.find_tracker('asdf_g').url)
+        self.assertEqual('1', bugtrackers.find_tracker('AS_DF').url)
+        self.assertEqual('3', bugtrackers.find_tracker('bbsdf').url)
